--- a/trunk/CGWorkOpenGL/OpenGL.rc
+++ b/trunk/CGWorkOpenGL/OpenGL.rc
@@ -310,20 +310,19 @@ BEGIN
     LTEXT           "Enter 'd' value:",IDC_STATIC,25,30,49,8
 END
 
-IDD_FogDialog DIALOGEX 0, 0, 316, 183
+IDD_FogDialog DIALOGEX 0, 0, 220, 144
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Fog Parameters"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,205,162,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,259,162,50,14
-    PUSHBUTTON      "Choose...",IDC_BUTTON1,227,44,48,17
+    DEFPUSHBUTTON   "OK",IDOK,163,123,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,163,123,50,14
     LTEXT           "Color:",IDC_STATIC,25,47,22,15
     EDITTEXT        IDC_EDIT1,57,45,40,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT2,107,45,40,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT3,155,45,38,14,ES_AUTOHSCROLL
     LTEXT           "Mode:",IDC_STATIC,23,70,21,8
-    COMBOBOX        IDC_COMBO1,57,73,105,14,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBO1,57,73,105,14,CBS_DROPDOWNLIST | CBS_SORT | WS_TABSTOP
     LTEXT           "Density:",IDC_STATIC,25,103,30,12
     EDITTEXT        IDC_EDIT4,61,103,72,13,ES_AUTOHSCROLL
     CONTROL         "Enabled",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,25,23,79,13
@@ -457,9 +456,9 @@ BEGIN
     IDD_FogDialog, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 309
+        RIGHTMARGIN, 213
         TOPMARGIN, 7
-        BOTTOMMARGIN, 176
+        BOTTOMMARGIN, 137
     END
 END
 #endif    // APSTUDIO_INVOKED
