--- a/CGWorkOpenGL/OpenGL.rc
+++ b/CGWorkOpenGL/OpenGL.rc
@@ -83,7 +83,11 @@ BEGIN
     POPUP "&File"
     BEGIN
         MENUITEM "&Load",                       ID_FILE_LOAD
-        MENUITEM "&Reset",                      ID_FILE_RESET
+        POPUP "Reset:"
+        BEGIN
+            MENUITEM "Light",                       ID_RESET_LIGHT
+            MENUITEM "View",                        ID_RESET_VIEW
+        END
         MENUITEM SEPARATOR
         MENUITEM "E&xit",                       ID_APP_EXIT
     END
