--- a/trunk/CGWorkOpenGL/OpenGL.rc
+++ b/trunk/CGWorkOpenGL/OpenGL.rc
@@ -61,8 +61,8 @@ BEGIN
     BUTTON      ID_AXIS_Z
     BUTTON      ID_AXIS_XY
     SEPARATOR
-    BUTTON      ID_ACTION_OBJECTSPACE
     BUTTON      ID_ACTION_VIEWSPACE
+    BUTTON      ID_ACTION_OBJECTSPACE
     BUTTON      ID_ACTION_TEXTURETRANSFORMATIONS
     SEPARATOR
     BUTTON      ID_OPTIONS_DRAWBOUNDINGBOX
@@ -608,6 +608,7 @@ END
 STRINGTABLE 
 BEGIN
     ID_OPTIONS_TORCH        "Mouse Torch\nMouse Torch"
+    ID_FILE_RESET           "Reset View\nReset"
 END
 
 #endif    // English (U.S.) resources
