--- a/CGWorkOpenGL/OpenGL.rc
+++ b/CGWorkOpenGL/OpenGL.rc
@@ -83,7 +83,7 @@ BEGIN
     POPUP "&File"
     BEGIN
         MENUITEM "&Load",                       ID_FILE_LOAD
-        POPUP "Reset:"
+        POPUP "Reset"
         BEGIN
             MENUITEM "Light",                       ID_RESET_LIGHT
             MENUITEM "View",                        ID_RESET_VIEW
@@ -123,7 +123,7 @@ BEGIN
         MENUITEM "Perspective &Control...",     ID_OPTIONS_PERSPECTIVECONTROL
         MENUITEM "&Mouse Sensitivity...",       ID_OPTIONS_MOUSESENSITIVITY
         MENUITEM SEPARATOR
-        MENUITEM "&Wireframe Color...",         ID_OPTIONS_CHANGEWIRECOLOR
+        MENUITEM "&Object Color...",            ID_OPTIONS_CHANGEWIRECOLOR
         MENUITEM "&Background Color...",        ID_OPTIONS_CHANGEBACKGROUNDCOLOR
         MENUITEM SEPARATOR
         MENUITEM "&Draw Bounding Box",          ID_OPTIONS_DRAWBOUNDINGBOX
@@ -137,9 +137,9 @@ BEGIN
     BEGIN
         POPUP "&Shading"
         BEGIN
+            MENUITEM "&Wireframe",                  ID_SHADING_WIREFRAME
             MENUITEM "&Flat",                       ID_LIGHT_SHADING_FLAT
             MENUITEM "&Gouraud",                    ID_LIGHT_SHADING_GOURAUD
-            MENUITEM "&Wireframe",                  ID_SHADING_WIREFRAME
         END
         MENUITEM "&Parameters...",              ID_LIGHT_CONSTANTS
         MENUITEM SEPARATOR
@@ -268,8 +268,8 @@ BEGIN
     LTEXT           "Shininess:",IDC_STATIC,15,60,33,8
     GROUPBOX        "Shading",IDC_STATIC,7,7,102,91
     GROUPBOX        "Texture Mapping",IDC_STATIC,117,10,310,183
-    COMBOBOX        IDC_COMBO1,176,65,108,30,CBS_DROPDOWNLIST | CBS_SORT | WS_TABSTOP
-    COMBOBOX        IDC_COMBO2,293,65,108,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBO1,176,65,108,58,CBS_DROPDOWNLIST | CBS_SORT | CBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBO2,293,65,108,54,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "T:",IDC_STATIC,293,25,8,8
     LTEXT           "S:",IDC_STATIC,176,25,8,8
     LTEXT           "Auto:",IDC_STATIC,123,40,18,8
@@ -277,8 +277,8 @@ BEGIN
     CONTROL         "",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,176,40,16,10
     CONTROL         "",IDC_CHECK2,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,293,40,16,10
     LTEXT           "Type:",IDC_STATIC,123,93,20,8
-    COMBOBOX        IDC_COMBO3,176,93,107,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_COMBO4,293,93,108,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBO3,176,93,107,63,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBO4,293,93,108,65,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Coordinates:",IDC_STATIC,123,114,42,8
     EDITTEXT        IDC_EDIT2,176,114,40,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT3,176,132,40,14,ES_AUTOHSCROLL
@@ -413,15 +413,15 @@ BEGIN
     IDC_COMBO2, 0x403, 10, 0
 0x4c47, 0x525f, 0x5045, 0x4145, 0x0054, 
     IDC_COMBO3, 0x403, 11, 0
-0x7945, 0x2065, 0x694c, 0x696e, 0x7265, "\000" 
+0x7945, 0x2065, 0x694c, 0x656e, 0x7261, "\000" 
     IDC_COMBO3, 0x403, 14, 0
-0x624f, 0x656a, 0x7463, 0x4c20, 0x6e69, 0x6569, 0x0072, 
+0x624f, 0x656a, 0x7463, 0x4c20, 0x6e69, 0x6165, 0x0072, 
     IDC_COMBO3, 0x403, 11, 0
 0x7053, 0x6568, 0x6572, 0x4d20, 0x7061, "\000" 
     IDC_COMBO4, 0x403, 11, 0
-0x7945, 0x2065, 0x694c, 0x696e, 0x7265, "\000" 
+0x7945, 0x2065, 0x694c, 0x656e, 0x7261, "\000" 
     IDC_COMBO4, 0x403, 14, 0
-0x624f, 0x656a, 0x7463, 0x4c20, 0x6e69, 0x6569, 0x0072, 
+0x624f, 0x656a, 0x7463, 0x4c20, 0x6e69, 0x6165, 0x0072, 
     IDC_COMBO4, 0x403, 11, 0
 0x7053, 0x6568, 0x6572, 0x4d20, 0x7061, "\000" 
     0
@@ -580,7 +580,7 @@ END
 
 STRINGTABLE 
 BEGIN
-    ID_FILE_LOAD            "Load a IRIT Data File\nLoad IRIT Data File"
+    ID_FILE_LOAD            "Load an IRIT Data File\nLoad IRIT Data File"
     ID_VIEW_ORTHOGRAPHIC    "View Orthographic Projection\nOrthographic"
     ID_VIEW_PERSPECTIVE     "View Perspective projection\nPerspective"
     ID_ACTION_ROTATE        "Rotate Model\nRotate"
@@ -589,26 +589,48 @@ BEGIN
     ID_AXIS_X               "X Axis\nX Axis"
     ID_AXIS_Y               "Y Axis\nY Axis"
     ID_AXIS_Z               "Z Axis\nZ Axis"
+    ID_LIGHT_SHADING_FLAT   "Flat Shading\nFlat Shading"
+    ID_LIGHT_SHADING_GOURAUD "Gouraud Shading\nGouraud Shading"
+    ID_LIGHT_CONSTANTS      "Configure Light Parameters\nLight Parameters"
 END
 
 STRINGTABLE 
 BEGIN
     ID_BUTTON_SUBDIVIDE     "Run Subdivision Scheme\nSubdivide"
+    ID_OPTIONS_PERSPECTIVECONTROL 
+                            "Modify Perspective Settings\nPerspective Control"
+    ID_OPTIONS_MOUSESENSITIVITY "Control Mouse Sensitivity\nMouse Sensitivity"
 END
 
 STRINGTABLE 
 BEGIN
-    ID_ACTION_VIEWSPACE     "View Space\nView Space"
-    ID_ACTION_OBJECTSPACE   "Object Space\nObject Space"
-    ID_OPTIONS_DRAWBOUNDINGBOX "Bounding Box\nBounding Box"
-    ID_OPTIONS_SHOWVERTICESNORMALS "Vertex Normals\nVertex Normals"
-    ID_OPTIONS_SHOWFACESNORMALS "Face Normals\nFace Normals"
+    ID_ACTION_VIEWSPACE     "Transform in View Space\nView Space"
+    ID_ACTION_OBJECTSPACE   "Transform in Object Space\nObject Space"
+    ID_OPTIONS_CHANGEWIRECOLOR "Change Object Color\nObject Color"
+    ID_OPTIONS_CHANGEBACKGROUNDCOLOR 
+                            "Change Background Color\nBackground Color"
+    ID_OPTIONS_DRAWBOUNDINGBOX "Toggle Bounding Box\nBounding Box"
+    ID_OPTIONS_SHOWVERTICESNORMALS "Toggle Vertex Normals\nVertex Normals"
+    ID_OPTIONS_SHOWFACESNORMALS "Toggle Face Normals\nFace Normals"
 END
 
 STRINGTABLE 
 BEGIN
-    ID_OPTIONS_TORCH        "Mouse Torch\nMouse Torch"
+    ID_OPTIONS_TORCH        "Toggle Mouse Torch\nMouse Torch"
     ID_FILE_RESET           "Reset View\nReset"
+    ID_ACTION_UNIFORMSCALING "Scale Model Uniformly\nUniform Scale"
+END
+
+STRINGTABLE 
+BEGIN
+    ID_SHADING_WIREFRAME    "View as Wireframe\nWireframe Mode"
+    ID_MATERIAL_LOADTEXTURE "Load a Texture\nLoad Texture"
+    ID_OPTIONS_BACKFACESCULLING "Toggle Back-Face Culling\nBack-Face Culling"
+    ID_LIGHT_FOG            "Control Fog Parameters\nFog"
+    ID_MATERIAL_PROPERTIES  "Configure Texture Options\nConfigure Texture"
+    ID_ACTION_TEXTURETRANSFORMATIONS "Transform Texture\nTransform Texture"
+    ID_RESET_LIGHT          "Reset Lights\nReset Lights"
+    ID_RESET_VIEW           "Reset View\nReset View"
 END
 
 #endif    // English (U.S.) resources
