--- a/trunk/CGWorkOpenGL/OpenGL.rc
+++ b/trunk/CGWorkOpenGL/OpenGL.rc
@@ -149,6 +149,8 @@ BEGIN
     BEGIN
         MENUITEM "&Load Texture...",            ID_MATERIAL_LOADTEXTURE
         MENUITEM "&Properties...",              ID_MATERIAL_PROPERTIES
+        MENUITEM SEPARATOR
+        MENUITEM "Tesselation",                 ID_MATERIAL_TESSELATION
     END
     POPUP "&Help"
     BEGIN
