--- a/CGWorkOpenGL/OpenGL.vcproj
+++ b/CGWorkOpenGL/OpenGL.vcproj
@@ -274,6 +274,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\MyEnvironMapper.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\MyFogPrameters.cpp"
 				>
 			</File>
@@ -291,6 +295,10 @@
 			</File>
 			<File
 				RelativePath=".\MyPolygon.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\MyRawPngWrapper.cpp"
 				>
 			</File>
 			<File
@@ -477,6 +485,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\MyEnvironMapper.h"
+				>
+			</File>
+			<File
 				RelativePath=".\MyFogPrameters.h"
 				>
 			</File>
@@ -494,6 +506,10 @@
 			</File>
 			<File
 				RelativePath=".\MyPolygon.h"
+				>
+			</File>
+			<File
+				RelativePath=".\MyRawPngWrapper.h"
 				>
 			</File>
 			<File
