Hw2 Done!!! (With some missing features :( )

--- a/CGWorkOpenGL/OpenGL.rc
+++ b/CGWorkOpenGL/OpenGL.rc
@@ -306,17 +306,6 @@ BEGIN
     LTEXT           "100%",IDC_STATIC,216,24,20,8
 END
 
-IDD_PERSPECTIVE_DLG DIALOGEX 0, 0, 262, 99
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Perspective Options"
-FONT 8, "MS Shell Dlg", 400, 0, 0x1
-BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,205,78,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,205,78,50,14
-    EDITTEXT        IDC_EDIT1,97,22,75,21,ES_AUTOHSCROLL
-    LTEXT           "Enter 'd' value:",IDC_STATIC,25,30,49,8
-END
-
 IDD_FogDialog DIALOGEX 0, 0, 220, 144
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Fog Parameters"
@@ -464,14 +453,6 @@ BEGIN
         RIGHTMARGIN, 248
         TOPMARGIN, 7
         BOTTOMMARGIN, 63
-    END
-
-    IDD_PERSPECTIVE_DLG, DIALOG
-    BEGIN
-        LEFTMARGIN, 7
-        RIGHTMARGIN, 255
-        TOPMARGIN, 7
-        BOTTOMMARGIN, 92
     END
 
     IDD_FogDialog, DIALOG
@@ -642,6 +623,7 @@ END
 STRINGTABLE 
 BEGIN
     ID_OPTIONS_TORCH        "Toggle Mouse Torch\nMouse Torch"
+    ID_AXIS_XY              "X/Y Axes\nX/Y Axes"
     ID_FILE_RESET           "Reset View\nReset"
     ID_ACTION_UNIFORMSCALING "Scale Model Uniformly\nUniform Scale"
 END
