--- a/trunk/CGWorkOpenGL/OpenGL.vcproj
+++ b/trunk/CGWorkOpenGL/OpenGL.vcproj
@@ -400,6 +400,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\shadersSkel.cpp"
+				>
+			</File>
+			<File
 				RelativePath="StdAfx.cpp"
 				>
 				<FileConfiguration
@@ -534,6 +538,10 @@
 			</File>
 			<File
 				RelativePath="Resource.h"
+				>
+			</File>
+			<File
+				RelativePath=".\shadersSkel.h"
 				>
 			</File>
 			<File
